Changelog
=========

1.0b1 - Unreleased
-------------------

* Removed 'theme' and alternative themes support: Themes should be referenced
  using the ``<theme />`` directive in the Diazo rules file.
  [optilude]

* Removed 'domains' support: This can be handled with the rules file syntax
  by using the ``host`` parameter.
  [optilude]
  
* Removed 'notheme' support: This can be handled within the rules file syntax
  by using the ``path`` parameter.
  [optilude]
  
* Added ``path`` and ``host`` as parameters to the Diazo rules file. These
  can now be used as conditional expressions.
  [optilude]
  
* Removed dependency on XDV in favour of dependency on Diazo (which is the
  new name for XDV).
  [optilude]
  
* Forked from collective.xdv 1.0rc11.
  [optilude]